<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/transparent"
    android:gravity="center">

    <FrameLayout
        android:id="@+id/dialog_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_bg"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/send_message"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:hint="@string/enter_message"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView">

                    <TextView
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@color/gray_color_code"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/cancel"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/login_bg"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>


    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close"
        android:visibility="gone" />

</RelativeLayout>

