<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="mContactUsViewModel"
            type="com.edusunsoft.transport.orataro.ui.activitycontactus.ContactUsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".ui.activitycontactus.ContactusActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/nav_item_background"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/phone_number"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/nav_item_background"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mContactUsViewModel.Sendemail()}"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/email_address"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/nav_item_background"
            android:gravity="center|start|top"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_timing"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/timing"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal" />

        </LinearLayout>


        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_margin="16dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/toolbar">-->

        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:id="@+id/til_subject"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginBottom="6dp"-->
        <!--                android:hint="subject"-->
        <!--                app:layout_constraintBottom_toTopOf="@+id/til_message"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:layout_constraintVertical_bias="0"-->
        <!--                app:layout_constraintVertical_chainStyle="packed">-->

        <!--                <com.google.android.material.textfield.TextInputEditText-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:imeOptions="actionNext"-->
        <!--                    android:inputType="text"-->
        <!--                    android:maxLength="255"-->
        <!--                    tools:text="Write your subject of query" />-->

        <!--            </com.google.android.material.textfield.TextInputLayout>-->

        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:id="@+id/til_message"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginBottom="6dp"-->
        <!--                android:hint="message"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toBottomOf="@+id/til_subject"-->
        <!--                app:layout_constraintVertical_bias="0"-->
        <!--                app:layout_constraintVertical_chainStyle="packed">-->

        <!--                <com.google.android.material.textfield.TextInputEditText-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="200dp"-->
        <!--                    android:gravity="top"-->
        <!--                    android:imeOptions="actionDone"-->
        <!--                    android:inputType="text"-->
        <!--                    android:maxLength="255"-->
        <!--                    tools:text="Enter your message here" />-->

        <!--            </com.google.android.material.textfield.TextInputLayout>-->


        <!--            <androidx.cardview.widget.CardView-->
        <!--                android:id="@+id/card_login"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="@dimen/_10sdp"-->
        <!--                android:clickable="true"-->
        <!--                android:focusable="true"-->
        <!--                android:foreground="?selectableItemBackground"-->
        <!--                app:cardCornerRadius="30dp"-->
        <!--                app:cardElevation="0dp"-->
        <!--                app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent">-->

        <!--                <FrameLayout-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_gravity="center"-->
        <!--                    android:background="@drawable/button_bg">-->

        <!--                    <androidx.appcompat.widget.AppCompatTextView-->
        <!--                        android:id="@+id/tv_btn_login"-->
        <!--                        android:layout_width="wrap_content"-->
        <!--                        android:layout_height="match_parent"-->
        <!--                        android:layout_gravity="center"-->
        <!--                        android:layout_marginStart="15dp"-->
        <!--                        android:layout_marginEnd="15dp"-->
        <!--                        android:gravity="center"-->
        <!--                        android:padding="@dimen/_10sdp"-->
        <!--                        android:text="Submit"-->
        <!--                        android:textColor="@android:color/white"-->
        <!--                        android:textSize="@dimen/_12ssp" />-->

        <!--                </FrameLayout>-->

        <!--            </androidx.cardview.widget.CardView>-->

        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>